# design-pattern-c

./: .gitignore  CMakeLists.txt  README.md
behavioral/: chain_of_responsibility.c  command.c  interpreter.c  iterator.c  mediator.c  memento.c  observer.c  state.c  strategy.c  template_method.c  visitor.c
creational/: CMakeLists.txt  abstract_factory.c  builder.c  factory_method.c  prototype.c  singleton.c
oo/: encapsulation.c  encapsulation.h  inheritance.c  overload.c  overriding.c
structural/: adapter.c  bridge.c  composite.c  decorator.c  facade.c  flyweight.c  proxy.c
